@@ -2,20 +2,28 @@ NASM=nasm -f bin
 RM=rm -f
 CC=gcc
 CFLAGS=-c -masm=intel -m64 -mno-red-zone -ffreestanding -fno-pic -O0 -mcmodel=large -I..
+AR=ar
+AFLAGS=-crs
 MAKE=make
 
-all: asm.o io.o
+all: asm.a
 
-asm.o: asm.c
+asm.a: misc.o
+	$(AR) $(AFLAGS) asm.a misc.o
+	
+#io.o: io.c
+#	$(CC) $(CFLAGS) -o $@ $<
+	
+misc.o: misc.c
 	$(CC) $(CFLAGS) -o $@ $<
 	
-io.o: io.c
-	$(CC) $(CFLAGS) -o $@ $<
-	
-clean: asm-o-clean io-o-clean
+clean: asm-a-clean io-o-clean misc-o-clean
 
-asm-o-clean:
-	$(RM) asm.o
+asm-a-clean:
+	$(RM) asm.a
 	
 io-o-clean:
 	$(RM) io.o
+	
+misc-o-clean:
+	$(RM) misc.o
