@@ -9,16 +9,22 @@ MAKE=make
 
 all: interrupts.a
 
-interrupts.a: de.o idt.o
-	$(AR) $(AFLAGS) interrupts.a de.o idt.o
+interrupts.a: de.o idt.o irq.o pic.o
+	$(AR) $(AFLAGS) interrupts.a de.o idt.o irq.o pic.o
 	
 de.o: de.c
 	$(CC) $(CFLAGS) $(ISRCFLAGS) -o $@ $<
 
 idt.o: idt.c
-	$(CC) $(CFLAGS) -o idt.o idt.c
+	$(CC) $(CFLAGS) -o $@ $<
 	
-clean: de-o-clean interrupts-a-clean idt-o-clean
+irq.o: irq.c
+	$(CC) $(CFLAGS) $(ISRCFLAGS) -o $@ $<
+	
+pic.o: pic.c
+	$(CC) $(CFLAGS) -o $@ $<
+	
+clean: de-o-clean interrupts-a-clean idt-o-clean irq-o-clean pic-o-clean
 
 de-o-clean:
 	$(RM) de.o
@@ -28,3 +34,9 @@ interrupts-a-clean:
 
 idt-o-clean:
 	$(RM) idt.o
+
+irq-o-clean:
+	$(RM) irq.o
+	
+pic-o-clean:
+	$(RM) pic.o
